--- a/src/components/contacts.html
+++ b/src/components/contacts.html
@@ -10,8 +10,8 @@
     eu mauris vitae posuere.
   </p>
 </div>
-<div class="contacts__info-wrapper mainContact__info-wrapper">
-  <div class="contacts__info-wrap mainContact__info-wrap">
+<div class="contacts__info-wrapper main-contact__info-wrapper">
+  <div class="contacts__info-wrap main-contact__info-wrap">
     <div class="contacts__info-city contacts__city">
       <h4 class="contacts__city-city">Kyiv</h4>
       <p class="contacts__city-info">(209) 555-0104</p>
@@ -41,7 +41,7 @@
   </div>
 </div>
 <div class="contacts__bottom-mobile">
-  <a href="#" class="contacts__button popUp__btn button"> Make request </a>
+  <a href="#" class="contacts__button pop-up__btn button"> Make request </a>
   <div class="contacts__bottom-link contacts__link">
     <a href="#" class="contacts__link-link"> info@gmail.com </a>
     <div class="contacts__link-wrapper">
