--- a/src/scss/about/companyLorem.scss
+++ b/src/scss/about/companyLorem.scss
@@ -1,4 +1,4 @@
-.companyLorem {
+.company-lorem {
   padding-top: 100px;
   background-color: #080808;
   min-height: 815px;
@@ -18,7 +18,7 @@
   &__info-link {
     color: #fff;
   }
-  &__info-linkSecond {
+  &__info-link-second {
     color: #fff;
   }
   &__info-text {
