--- a/src/components/flatCard.html
+++ b/src/components/flatCard.html
@@ -1,68 +1,68 @@
-<div class="flatCard__wrapper">
-  <div class="flatCard__left photos__flatCard-left">
-    <div class="flatCard__left-title">
+<div class="flat-card__wrapper">
+  <div class="flat-card__left photos__flat-card-left">
+    <div class="flat-card__left-title">
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
     </div>
   </div>
-  <div class="flatCard__right ourProjects__flatCard-right">
-    <div class="flatCard__right-text ourProjects__flatCard-right-text">
+  <div class="flat-card__right our-projects__flat-card-right">
+    <div class="flat-card__right-text our-projects__flat-card-right-text">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
         ullamcorper eu mauris vitae posuere. Ut at luctus ligula. Nunc ante
         felis, aliquam eu enim sed, ornare pretium velit.
       </p>
     </div>
-    <a href="#" class="flatCard__right-button popUp__btn button">
+    <a href="#" class="flat-card__right-button pop-up__btn button">
         Make request
     </a>
   </div>
-  <div class="flatCard__wrapper-img flatCard__img">
+  <div class="flat-card__wrapper-img flat-card__img">
     <div class="flatCard__img-first">
         <a href="#">
             <img src="./images/components/flatCard/first.png" alt="flat">
         </a>
     </div>
-    <div class="flatCard__img-second">
+    <div class="flat-card__img-second">
         <a href="#">
             <img src="./images/components/flatCard/second.png" alt="flat">
         </a>
     </div>
-    <div class="flatCard__img-third">
+    <div class="flat-card__img-third">
         <a href="#">
             <img src="./images/components/flatCard/third.png" alt="flat">
         </a>
     </div>
-    <div class="flatCard__img-fourth">
+    <div class="flat-card__img-fourth">
         <a href="#">
             <img src="./images/components/flatCard/fourth.png" alt="flat">
         </a>
     </div>
-    <div class="flatCard__img-fifth">
+    <div class="flat-card__img-fifth">
         <a href="#">
             <img src="./images/components/flatCard/fifth.png" alt="flat">
         </a>
     </div>
-    <div class="flatCard__img-sixth">
+    <div class="flat-card__img-sixth">
         <a href="#">
             <img src="./images/components/flatCard/seventh.png" alt="flat">
         </a>   
     </div>
-    <div class="flatCard__img-seventh">
+    <div class="flat-card__img-seventh">
         <a href="#">
             <img src="./images/components/flatCard/eighth.png" alt="flat">
         </a>
     </div>
-    <div class="flatCard__img-eighth">
+    <div class="flat-card__img-eighth">
         <a href="#">
             <img src="./images/components/flatCard/nineth.png" alt="flat">
         </a>
     </div>
-    <div class="flatCard__img-nineth">
+    <div class="flat-card__img-nineth">
         <a href="#">
             <img src="./images/components/flatCard/tenth.png" alt="flat">
         </a>
     </div>
-    <div class="flatCard__img-tenth">
+    <div class="flat-card__img-tenth">
         <a href="#">
             <img src="./images/components/flatCard/eleventh.png" alt="flat">
         </a>
