--- a/src/scss/about/companyBottom.scss
+++ b/src/scss/about/companyBottom.scss
@@ -1,4 +1,4 @@
-.companyBottom {
+.company-bottom {
     margin-bottom: 0;
     padding-bottom: 144px;
     position: relative;
@@ -37,10 +37,9 @@
 
   // .companyBottom__left-userName
 
-  &__left-userName {
+  &__left-user-name {
     color: var(--1, #080808);
     font-size: 36px;
-    font-style: normal;
     font-weight: 700;
     line-height: normal;
     padding-top: 65px;
@@ -56,10 +55,9 @@
 
   // .companyBottom__left-userWork
 
-  &__left-userWork {
+  &__left-user-work {
     color: var(--1, #080808);
     font-size: 16px;
-    font-style: normal;
     font-weight: 700;
     line-height: 136.528%; /* 21.844px */
     max-width: 160px;
@@ -78,7 +76,6 @@
   &__left-text {
     color: var(--1, #080808);
     font-size: 20px;
-    font-style: normal;
     font-weight: 300;
     line-height: 170.66%; /* 34.132px */
     opacity: 0.7;
@@ -145,7 +142,6 @@
   &__wrap-years {
     color: var(--1, #080808);
     font-size: 56px;
-    font-style: normal;
     font-weight: 700;
     line-height: normal;
     padding-bottom: 6px;
@@ -162,7 +158,6 @@
   &__wrap-years-info {
     color: var(--1, #080808);
     font-size: 14px;
-    font-style: normal;
     font-weight: 300;
     line-height: 132%; /* 18.48px */
     max-width: 94px;
@@ -174,7 +169,6 @@
     max-width: 516px;
     color: var(--1, #080808);
     font-size: 14px;
-    font-style: normal;
     font-weight: 300;
     line-height: 170.66%; /* 23.892px */
   }
