--- a/src/scss/about/companyCenter.scss
+++ b/src/scss/about/companyCenter.scss
@@ -1,4 +1,4 @@
-.companyCenter {
+.company-center {
   margin-bottom: 144px;
   @media(max-width: 575px) {
     margin-bottom: 100px;
@@ -61,7 +61,6 @@
   &__wrap-title {
     color: var(--1, #080808);
     font-size: 56px;
-    font-style: normal;
     font-weight: 700;
     line-height: normal;
     padding-bottom: 4px;
@@ -78,7 +77,6 @@
   &__wrap-text {
     color: var(--1, #080808);
     font-size: 14px;
-    font-style: normal;
     font-weight: 300;
     line-height: 132%; /* 18.48px */
     max-width: 98px;
@@ -89,7 +87,6 @@
   &__content-text {
     color: var(--1, #080808);
     font-size: 14px;
-    font-style: normal;
     font-weight: 300;
     line-height: 170.66%; /* 23.892px */
     max-width: 382px;
