--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -1,4 +1,3 @@
-
 .body-black {
   color: #000;
 }
@@ -20,34 +19,34 @@
   margin: 0 auto;
   padding: 0 rem($mainOffset);
 
-  @media(max-width: 1024px) {
+  @media (max-width: 1024px) {
     max-width: 943px;
   }
 
-  @media(max-width: 768px) {
+  @media (max-width: 768px) {
     max-width: 700px;
   }
 
-  @media(max-width: 575px) {
+  @media (max-width: 575px) {
     max-width: 357px;
-   }
+  }
 }
 // Стили отзывчивых картинок (IBG) ============================================
 [class*="-ibg"] {
   position: relative;
-	img {
+  img {
     position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		object-fit: cover;
-	}
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+  }
 }
 [class*="-ibg_contain"] {
   img {
     object-fit: contain;
-	}
+  }
 }
 // Стили для обертки модальных окон ===========================================
 [class*="_overlay-bg"] {
@@ -63,7 +62,8 @@
   padding: rem(60) rem(15); // Изменить по макету
   overflow-y: auto;
   @include media(768) {
-    &::-webkit-scrollbar { // Удалить из за ненадобности
+    &::-webkit-scrollbar {
+      // Удалить из за ненадобности
       display: none;
     }
   }
@@ -95,5 +95,32 @@
 
   &_start {
     padding-top: rem($headerHeight);
+  }
+}
+
+.header-scroll {
+  background: #000;
+  opacity: 0.5;
+  transition: all 0.2s ease;
+
+  @media (min-width: 998px) {
+    &:hover {
+      background: #000;
+      opacity: 1;
+      z-index: 11;
+    }
+  }
+}
+.header-scroll-black {
+  background: grey!important;
+  opacity: 0.5;
+  transition: all 0.2s ease;
+
+  @media (min-width: 998px) {
+    &:hover {
+      background: #fff!important;
+      opacity: 1;
+      z-index: 11;
+    }
   }
 }
