--- a/src/scss/main/company.scss
+++ b/src/scss/main/company.scss
@@ -15,6 +15,9 @@
     max-width: 1412px;
     padding-left: 35px;
 
+    @media(max-width: 575px) {
+      max-width: 600px;
+    }
     @media(max-width: 420px) {
       padding-left: 24px;
     }
@@ -77,7 +80,6 @@
       transform: rotate(-90deg);
       color: var(--5, #828282);
       font-size: 8px;
-      font-style: normal;
       font-weight: 700;
       line-height: 170.66%; /* 13.653px */
       letter-spacing: 1.6px;
@@ -107,7 +109,6 @@
     h2 {
       color: var(--1, #080808);
       font-size: 36px;
-      font-style: normal;
       font-weight: 700;
       line-height: normal;
 
@@ -143,7 +144,6 @@
     p {
       color: var(--1, #080808);
       font-size: 14px;
-      font-style: normal;
       font-weight: 300;
       line-height: 163.66%;
       opacity: 0.7;
@@ -190,7 +190,6 @@
     a {
       color: var(--1, #080808);
       font-size: 10px;
-      font-style: normal;
       font-weight: 700;
       line-height: normal;
       letter-spacing: 0.9px;
@@ -290,7 +289,6 @@
       color: var(--1, #080808);
       font-family: Montserrat;
       font-size: 36px;
-      font-style: normal;
       font-weight: 700;
       line-height: normal;
 
@@ -385,7 +383,6 @@
     p {
       color: var(--1, #080808);
       font-size: 20px;
-      font-style: normal;
       font-weight: 300;
       line-height: 170.66%;
       opacity: 0.7;
@@ -419,7 +416,6 @@
       transform: rotate(-90deg);
       color: var(--5, #828282);
       font-size: 8px;
-      font-style: normal;
       font-weight: 700;
       line-height: 170.66%;
       letter-spacing: 1.6px;
