--- a/src/scss/main/work.scss
+++ b/src/scss/main/work.scss
@@ -46,7 +46,6 @@
   &__info-link {
     color: var(--1, #080808);
     font-size: 56px;
-    font-style: normal;
     font-weight: 700;
     line-height: normal;
 
@@ -61,13 +60,12 @@
     }
   }
 
-  &__info-linkSecond {
+  &__info-link-second {
     display: none;
     @media (max-width: 590px) {
       display: block;
       color: var(--1, #080808);
       font-size: 32px;
-      font-style: normal;
       font-weight: 700;
       line-height: normal;
     }
@@ -80,7 +78,6 @@
     text-align: center;
     font-family: Montserrat;
     font-size: 14px;
-    font-style: normal;
     font-weight: 300;
     line-height: 170.66%; /* 23.892px */
   }
