--- a/src/scss/oneProject/oneDonec.scss
+++ b/src/scss/oneProject/oneDonec.scss
@@ -1,4 +1,4 @@
-.oneDonec {
+.one-donec {
   @media(max-width: 575px) {
     margin-bottom: 80px;
 }
@@ -25,7 +25,6 @@
   &__title {
     color: var(--1, #080808);
     font-size: 16px;
-    font-style: normal;
     font-weight: 700;
     line-height: 136.528%;
     max-width: 420px;
@@ -43,7 +42,6 @@
   &__text {
     color: var(--1, #080808);
     font-size: 14px;
-    font-style: normal;
     font-weight: 300;
     line-height: 170.66%; /* 23.892px */
     opacity: 0.7;
@@ -60,7 +58,6 @@
   &__btn {
     color: var(--1, #080808);
     font-size: 10px;
-    font-style: normal;
     font-weight: 700;
     line-height: normal;
     letter-spacing: 1.2px;
