--- a/src/scss/popUp/popUp.scss
+++ b/src/scss/popUp/popUp.scss
@@ -1,4 +1,4 @@
-.popUp {
+.pop-up {
   // .popUp__container
 
   &__container {
@@ -40,6 +40,7 @@
     flex-direction: column;
     justify-content: space-between;
     min-height: 41px;
+    gap: 10px;
     @media(max-width: 935px) {
       width: 25%;
     }
@@ -54,7 +55,6 @@
 
   &__linea-num {
     font-size: 9px;
-    font-style: normal;
     font-weight: 500;
     line-height: normal;
     letter-spacing: 0.54px;
@@ -76,6 +76,9 @@
   &__radio-button {
     cursor: pointer;
     position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 
     &::after {
       position: absolute;
@@ -85,9 +88,22 @@
       width: 85px;
       height: 1px;
       background: rgba(214, 214, 214, 0.3);
+      z-index: -1;
 
       @media(max-width: 935px) {
         width: 104px;
+        left: 63px;
+      }
+      @media(max-width: 700px) {
+        width: 80px;
+        left: 42px;
+      }
+    }
+
+    svg {
+      width: 100%;
+      @media(max-width: 700px) {
+        height: 20px;
       }
     }
 
@@ -101,7 +117,7 @@
       fill: #1D1F26;
     }
   }
-  &__radio-buttonLast {
+  &__radio-button-last {
     &::after {
       display: none;
     }
@@ -137,7 +153,7 @@
     pointer-events: none;
   }
 }
-.popUp-content {
+.pop-up-content {
   // .popUp-content__container
 
   &__container {
@@ -190,10 +206,6 @@
     max-width: 800px;
     margin: 0 auto;
     transition: all 0.2s ease;
-
-    &.invalid {
-      border: 3px solid red;
-    }
   }
 
   &__top-wrapper {
@@ -238,7 +250,6 @@
     input {
       width: 100%;
       font-size: 11px;
-      font-style: normal;
       font-weight: 600;
       line-height: normal;
       letter-spacing: 0.66px;
@@ -247,7 +258,6 @@
 
     span {
       font-size: 11px;
-      font-style: normal;
       font-weight: 600;
       line-height: normal;
       letter-spacing: 0.66px;
@@ -278,9 +288,16 @@
     @media(max-width: 935px) {
       width: 368px;
     }
+    @media(max-width: 768px) {
+      margin: 0;
+      width: unset;
+      max-width: 477px;
+      padding: 0 56px;
+      padding-bottom: 48px;
+    }
     @media(max-width: 700px) {
-      width: 279px;
-      padding-bottom: 41px;
+      padding: 0 25px;
+      padding-bottom: 48px;
     }
 
     &::after {
@@ -291,11 +308,18 @@
       top: 24px;
       left: 0;
       background: rgba(214, 214, 214, 0.3);
+      @media(max-width: 768px) {
+        width: 78%;
+        left: 54px;
+      }
+      @media(max-width: 700px) {
+        width: 84%;
+        left: 26px;
+      }
     }
     input {
       width: 100%;
       font-size: 11px;
-      font-style: normal;
       font-weight: 600;
       line-height: normal;
       letter-spacing: 0.66px;
@@ -304,7 +328,6 @@
 
     span {
       font-size: 11px;
-      font-style: normal;
       font-weight: 600;
       line-height: normal;
       letter-spacing: 0.66px;
@@ -318,7 +341,6 @@
     text-align: center;
     font-family: Montserrat;
     font-size: 22px;
-    font-style: normal;
     font-weight: 700;
     line-height: 126.776%; /* 27.891px */
     padding-top: 45px;
@@ -335,7 +357,6 @@
       text-align: center;
       font-family: Montserrat;
       font-size: 24px;
-      font-style: normal;
       font-weight: 700;
       line-height: 126.776%; /* 27.891px */
       padding-top: 42px;
@@ -361,7 +382,6 @@
   &__bottom-text {
     color: #3a3e4b;
     font-size: 11px;
-    font-style: normal;
     font-weight: 600;
     line-height: normal;
     letter-spacing: 0.66px;
@@ -380,6 +400,7 @@
     width: 100%;
     @media(max-width: 1025px) {
       border: none;
+      padding: 12px 11px 9px 0px;
     }
   }
   &__rightSvg {
@@ -408,19 +429,17 @@
     }
   }
 
-  &__button-nameFile {
+  &__button-name-file {
     color: #3a3e4b;
     font-size: 11px;
-    font-style: normal;
     font-weight: 600;
     line-height: normal;
     letter-spacing: 0.66px;
   }
 
-  &__button-sizeFile {
+  &__button-size-file {
     color: rgba(58, 62, 75, 0.45);
     font-size: 9px;
-    font-style: normal;
     font-weight: 500;
     line-height: normal;
     letter-spacing: 0.54px;
@@ -431,7 +450,6 @@
     text-align: center;
     font-family: Roboto;
     font-size: 10px;
-    font-style: normal;
     font-weight: 400;
     line-height: 140.625%; /* 14.063px */
     letter-spacing: 0.6px;
@@ -470,6 +488,6 @@
   }
 }
 
-.popUp-content__bottom-linea input[type="radio"]:checked + .popUp__radio-button {
+.pop-up-content__bottom-linea input[type="radio"]:checked + .pop-up__radio-button {
   background-color: #000;
 }
