--- a/src/scss/popUpValid/popUpValid.scss
+++ b/src/scss/popUpValid/popUpValid.scss
@@ -31,23 +31,21 @@
   // .popup-valid__wrapper
 
   &__wrapper {
-    max-width: 1047px;
-    margin: 120px auto;
     background: #fff;
     min-height: 404px;
-    @media(max-width: 1024px) {
-        max-width: 706px;
-        margin: 180px auto;
+    width: 704px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    @media(max-width: 800px) {
+      width: 518px;
+      min-height: 295px;
     }
-    @media(max-width: 768px) {
-      max-width: 520px;
-      margin: 365px auto;
-      min-height: 296px;
-    }
-    @media(max-width: 376px) {
-      margin: 163px auto;
-      max-width: 330px;
-      min-height: 340px;
+    @media(max-width: 540px) {
+      width: 328px;
+      min-height: 295px;
+      min-height: 338px;
     }
   }
 
@@ -57,15 +55,14 @@
     color: #3a3e4b;
     text-align: center;
     font-size: 24px;
-    font-style: normal;
     font-weight: 700;
     line-height: normal;
     padding-top: 107px;
     padding-bottom: 15px;
-    @media(max-width: 768px) {
+    @media(max-width: 800px) {
       padding-top: 55px;
     }
-    @media(max-width: 376px) {
+    @media(max-width: 540px) {
       padding-top: 40px;
     }
   }
@@ -76,16 +73,15 @@
     color: #3a3e4b;
     text-align: center;
     font-size: 14px;
-    font-style: normal;
     font-weight: 300;
     line-height: 170.66%; /* 23.892px */
     max-width: 460px;
     margin: 0 auto;
     padding-bottom: 34px;
-    @media(max-width: 768px) {
+    @media(max-width: 800px) {
       padding-bottom: 26px;
     }
-    @media(max-width: 376px) {
+    @media(max-width: 540px) {
       max-width: 278px;
     }
   }
