--- a/src/scss/preloader/preloader.scss
+++ b/src/scss/preloader/preloader.scss
@@ -2,7 +2,6 @@
   // .preloader__container
 
   &__container {
-    // display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -11,6 +10,7 @@
     background: #000;
     z-index: 15;
     max-width: unset !important;
+    overflow: hidden;
   }
 
   // .preloader__wrapper
@@ -30,7 +30,6 @@
     color: #FAFAFA;
     font-family: Montserrat;
     font-size: 24px;
-    font-style: normal;
     font-weight: 300;
     line-height: normal;
     letter-spacing: 6.24px;
