work is finished

--- a/src/scss/config/base.scss
+++ b/src/scss/config/base.scss
@@ -112,7 +112,7 @@
   }
 }
 .header-scroll-black {
-  background: grey!important;
+  background: rgb(205, 202, 202)!important;
   opacity: 0.5;
   transition: all 0.2s ease;
 
